add more params to optimize with GA